Support for yolo instance-segmentation polygon format (#119)
* added support for yolo instance-segmentation polygon format

* added support for yolo instance-segmentation polygon format

* Update yolo read-write logic, update tests.

---------

Co-authored-by: Markus Fleischhacker <markus.fleischhacker28+git@gmail.com>